--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/nuxt": "^0.4.2",
     "@nuxtjs/emotion": "^0.1.0",
+    "@nuxtjs/vercel-builder": "^0.22.1",
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
     "cors": "^2.8.5",
