--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
   "version": 2,
+  "env": {
+    "ON_VERCEL": "true"
+  },
   "builds": [
     {
+      "src": "api/**/*.js"
+    },
+    {
       "src": "nuxt.config.js",
-      "use": "@nuxtjs/vercel-builder",
-      "config": {
-        "serverFiles": ["api/index.js"]
-      }
+      "use": "@nuxtjs/vercel-builder"
     }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "api/index.js" },
+    { "src": "/api", "dest": "api/index.js" },
+    { "src": "/(.*)", "dest": "$1" }
   ]
 }
