--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,11 @@
   },
   "builds": [
     {
-      "src": "api/**/*.js"
-    },
-    {
       "src": "nuxt.config.js",
-      "use": "@nuxtjs/vercel-builder"
+      "use": "@nuxtjs/vercel-builder",
+      "config": {
+        "serverFiles": ["api/**"]
+      }
     }
   ],
   "routes": [
